# dataforge

./: .gitignore  CMakeLists.txt  FUNDING.yml  README.md  build.sh  dataforge.sln  dataforge.slnx  vcpkg.json
.github/workflows/: linux-tests.yml  macos-tests.yml  msvc-tests.yml
accel/: CMakeLists.txt  dataforge.vcxproj  dataforge.vcxproj.filters
docs/: design.md  quarks.md
examples/: aes.cpp  base64.cpp  crc.cpp  md5.cpp
include/dataforge/: pull_converter.hpp  push_converter.hpp  quark_pull_iterator.hpp  quark_push_iterator.hpp
include/dataforge/base_xx/: ascii85.hpp  base.hpp  base16.hpp  base32.hpp  base58.hpp  base64.hpp  z85.hpp
include/dataforge/basic/: buffer.hpp  filter.hpp  group.hpp  mapper.hpp
include/dataforge/checksum/: adler32.hpp  bsd.hpp  crc.hpp
include/dataforge/ciphers/: aes.hpp  belt.hpp  blowfish.hpp  defs.hpp  des.hpp  kuznyechik.hpp  magma.hpp  rc2.hpp  rc4.hpp  rc5.hpp  rc6.hpp
include/dataforge/compression/: bzip2.hpp  deflate.hpp  lz4.hpp  lzma.hpp
include/dataforge/detail/: config.hpp  error_handler.hpp  quarks.hpp
include/dataforge/detail/adler32/: bytes_to_adler32_pusher.hpp
include/dataforge/detail/base_xx/: ascii85_to_bytes_pusher.hpp  base16_to_bytes.hpp  base32_to_bytes_pusher.hpp  base58_to_bytes_pusher.hpp  base64.hpp  base64_to_bytes.hpp  bytes_to_ascii85_pusher.hpp  bytes_to_base16_pusher.hpp  bytes_to_base32_pusher.hpp  bytes_to_base58_pusher.hpp  bytes_to_base64.hpp  bytes_to_generic_base_pusher.hpp  bytes_to_z85_pusher.hpp  generic_base_to_bytes_pusher.hpp  z85_to_bytes_pusher.hpp
include/dataforge/detail/basic/: be_to_i.hpp  buffer_pusher.hpp  enumerator_pusher.hpp  filter.hpp  grouper.hpp  i_to_be.hpp  i_to_le.hpp  le_to_i.hpp  seq_mapper_pusher.hpp
include/dataforge/detail/bsd_checksum/: bytes_to_bsd_checksum_pusher.hpp
include/dataforge/detail/ciphers/: aes.hpp  aes.ipp  belt.hpp  belt.ipp  belt_encrypt.hpp  blowfish.hpp  blowfish.ipp  des.hpp  des.ipp  kuznyechik.hpp  kuznyechik.ipp  magma.hpp  magma.ipp  rc2.hpp  rc2.ipp  rc4.hpp  rc4.ipp  rc4_crypter.hpp  rc5.hpp  rc5.ipp  rc6.hpp  rc6.ipp
include/dataforge/detail/compression/: bzip2.hpp  bzip2_compressor.hpp  bzip2_extractor.hpp  deflate.hpp  deflater.hpp  inflater.hpp  lz4.hpp  lz4_compressor.hpp  lz4_extractor.hpp  lzma.hpp  lzma_compressor.hpp  lzma_extractor.hpp
include/dataforge/detail/crc/: bytes_to_crc16_pusher.hpp  bytes_to_crc32_pusher.hpp  bytes_to_crc64_pusher.hpp  bytes_to_crc8_pusher.hpp  crc.hpp
include/dataforge/detail/hashes/: belt.hpp  belt.ipp  blake.hpp  blake.ipp  bytes_to_md6_pusher.hpp  digest_generic_pusher.hpp  gost.hpp  gost.ipp  md2.hpp  md2.ipp  md4.hpp  md4.ipp  md5.hpp  md5.ipp  md6.hpp  md6.ipp  ripemd.hpp  ripemd.ipp  sha1.hpp  sha1.ipp  sha1_intrinsics_arm.ipp  sha1_intrinsics_x86.ipp  sha2.hpp  sha2.ipp  sha2_intrinsics.hpp  sha2_intrinsics_arm.ipp  sha2_intrinsics_x86.ipp  sha3.hpp  sha3.ipp  sha512_intrinsics_arm.ipp  sha512_intrinsics_x86.ipp  sha512_neon_arm.ipp  sha_qrk.hpp  streebog.hpp  streebog.ipp  tiger.hpp  whirlpool.hpp  whirlpool.ipp
include/dataforge/detail/unicode/: gbr.hpp  icu.hpp  icucp_to_utf16.hpp  utf16.hpp  utf16_to_icucp.hpp  utf16_to_utf32.hpp  utf16_to_utf7.hpp  utf16_to_utf8.hpp  utf32_grapheme_enumerator_pusher.hpp  utf32_to_utf16.hpp  utf32_to_utf8.hpp  utf7.hpp  utf7_to_utf16.hpp  utf8_to_utf16.hpp  utf8_to_utf32.hpp
include/dataforge/detail/utility/: basic_block_cipher.hpp  basic_block_cipher.ipp  concepts.hpp  counter.hpp  data_ops.hpp  digest_base.hpp
include/dataforge/hashes/: belt.hpp  blake.hpp  gost.hpp  md2.hpp  md4.hpp  md5.hpp  md6.hpp  ripemd.hpp  sha1.hpp  sha2.hpp  sha3.hpp  streebog.hpp  tiger.hpp  whirlpool.hpp
include/dataforge/unicode/: icu.hpp  utf.hpp
msvc/: .gitignore  dataforge_tests.sln  dataforge_tests.vcxproj  dataforge_tests.vcxproj.filters
tests/: CMakeLists.txt  dataforge_tests.vcxproj  dataforge_tests.vcxproj.filters  test_baseN.cpp  test_basic.cpp  test_checksums.cpp  test_ciphers.cpp  test_common.hpp  test_hashes.cpp  test_utf.cpp  tests.cpp
tools/: grapheme_breaker_tbl_generator.cpp
